tests/fixtures/invalid/pow_bool_dict_set.py
# Cannot call pow() with Bool, Dict[str, int], Set[int]
x = pow(True, {"a": 1}, {1, 2, 3})
